tests/ui/resolve_invalid_self.stderr
error: tests/ui/resolve_invalid_self.ql:2:5: invalid use of `self` outside a method receiver scope
      self
      ^^^^ `self` is only available inside methods
